# gp2ch

./: .gitignore  .gitmodules  main.py  pyproject.toml  requirements.txt
src/: audio.py  beat.py  chart.py  const.py  core.py  gp.py  mapping.py
