[project]
name = "gp2ch"
version = "0.1.0"
description = "A tool to convert Guitar Hero 8 "
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "demucs",
    "numpy==1.26.4",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "pysoundfile>=0.9.0.post1",
]

[tool.uv.sources]
demucs = { git = "https://github.com/adefossez/demucs" }
